# Ising-model-fullerenes

./: .gitignore  C60.nb  README.md
Ising-fullerenes-NN/: Makefile
Ising-fullerenes-NN-polynomial/: CMakeLists.txt  main.cpp  planarIsing.ipynb  utils.cpp  utils.h
Ising-fullerenes-NN/inc/: gsf_tensor.h
Ising-fullerenes-NN/src/: gsf_tensor.cpp  main.cpp
Ising-fullerenes-NNN/: Makefile
Ising-fullerenes-NNN/inc/: fullerenes.h  gsf_tensor.h
Ising-fullerenes-NNN/src/: fullerenes.cpp  gsf_tensor.cpp  main.cpp
Ising-fullerenes-python/: NNN_split_H_general.py  NNN_split_H_strong_coupling.py  NN_BFS_contract.py  NN_given_order_contract.py
Ising-fullerenes-python/data/C100/: C100-C1-148.xyz  C100-Cs-394.xyz
Ising-fullerenes-python/data/C50/: C50-C1-211.xyz
Ising-fullerenes-python/data/C84/: C84-Cs-15.xyz
Ising-fullerenes-python/data/C94/: C94-Cs-120.xyz
Ising-fullerenes-python/data/C96/: C96-Cs-170.xyz  C96-Cs-50.xyz
Ising-fullerenes-python/data/C98/: C98-C1-37.xyz  C98-C1-43.xyz
